--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="title">Manufactured for Perfection...</h1>
     <nav>
       <ul class="navbar">  
-        <li class="navitem"><a href="./project.html">Home</a></li>
+        <li class="navitem"><a href="./index.html">Home</a></li>
         <li class="navitem"><a href="./login.html">Log In</a></li>
         <li class="navitem"><a href="./signup.html">Sign Up</a></li>
         <li class="navitem"><a href="./contact.html">Contact</a></li>
