--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       <a class="logo"></a>
     <nav>
       <ul class="navbar">  
-        <li class="navitem"><a href="./project.html">Home</a></li>
+        <li class="navitem"><a href="./index.html">Home</a></li>
         <li class="navitem"><a href="./login.html">Log In</a></li>
         <li class="navitem"><a href="./signup.html">Sign Up</a></li>
         <li class="navitem"><a href="./contact.html">Contact</a></li>
