--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     <section class="productline">
      <h2 class="subtitle">Tires</h2>
       <ul class="productgrid">
-      <li><img src="./assets/tire.png" alt="FeartheFreeze" id="product"></li>
+      <li><a href="https://www.yokohamatire.com/tires/advan-apex-v601"><img src="./assets/tire.png" alt="FeartheFreeze" id="product"></a><figcaption>Wheel not included</figcaption></li>
         <h3>Subvan Trenches</h3>
         <li class="desc">Performance track tire. Not to be driven in chilly or mildly drizzly conditions. Will wear down 10x faster than your average road tire.</li>
-      <li><img src="./assets/tire1.png" alt="RainWarrior" id="product"></li>
+      <li><a href="https://lexanitires.com/tires/lx-nine/"><img src="./assets/tire1.png" alt="RainWarrior" id="product"></a><figcaption>Wheel not included</figcaption></li>
         <h3>XL-60</h3>
         <li class="desc">Budget all seasons. Not to be driven in hard. It will get you from A-B, but careful when going to C. Will wear down 2x faster than your average road tire.</li>
-      <li><img src="./assets/tire2.png" alt="FeartheDrizzle" id="product"></li>
+      <li><a href="https://www.nittotire.com/car-tires/nt05-max-performance-tire/"><img src="./assets/tire2.png" alt="FeartheDrizzle" id="product"></a><figcaption>Wheel not included</figcaption></li>
         <h3>Mitto MS04</h3>
         <li class="desc">Performance summer tire. Not to be driven in freezing or rainy conditions. Will wear down 3x faster than your average road tire.</li>
-      <li><img src="./assets/tire3.png" alt="Youllbefine" id="product"></li>
+      <li><a href="https://lexanitires.com/tires/lx-seven/"><img src="./assets/tire3.png" alt="Youllbefine" id="product"></a><figcaption>Wheel not included</figcaption></li>
         <h3>XL-11</h3>
         <li class="desc">Budget all seasons. Not to be driven in hard. It will get you from A-B, but careful when going to C. Will wear down 1.5x faster than your average road tire.</li>
       
